# poetry-dependencies-updater

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
poetry_dependencies_updater/: __init__.py
tests/: test_poetry_dependencies_updater.py
