[tool.poetry]
name = "poetry-dependencies-updater"
version = "0.1.0"
description = ""
authors = ["Sukruth Grandhi <sukruth.grandhi@ni.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

# Lint
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.11.1"
black = "^22.3.0"

# Test
pytest = "^6.0"
pytest-cov = "^2.8.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
